tests/sksl/errors/EmptyArray.glsl
### Compilation failed:

error: 1: array size must be positive
int disallowed_zero[0];
                    ^
error: 2: array size must be positive
int disallowed_negative[-1];
                        ^^
2 errors
